# python-fundamentals

./: .gitignore  README.md  d2 q3.py  d2 q5.py  d2 q6.py  d2 q7.py  d2 q9.py  day 2 q1.py  mini p.py  report.txt
.github/workflows/: ci-day4.yml
mini_projects/day4/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  utility_toolkit.py
mini_projects/day4/examples/: data_processing_demo.py  read_history.py
mini_projects/day4/tests/: test_utility_toolkit.py
mini_projects/day5_cli_notes_app/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  cli_notes_app.py  pyproject.toml
mini_projects/day5_cli_notes_app/tests/: test_cli_notes.py
mini_projects/day6_student_manager/: .gitignore  CONTRIBUTING.md  MIT License.txt  README.md  app.py  requirements.txt  storage.py  student.py  students.json  test_student.py
mini_projects/day7_student_portal/: .gitignore  CONTRIBUTING.md  MIT License.txt  README.md  app.py  fees.py  marks.py  requirements.txt  storage.py  student.py  students.example.json  test_managers.py  test_persistence.py
mini_projects/day_1_cli_calculator/: README.md  calculator.py  history.txt
mini_projects/day_3_patterns/: README.md
mini_projects/text_analytics/: README.md
practice/day_2/: day2_q2.py  day2_q4.py  day2_q8.py
practice/day_3/: README.txt
